Updated contact options

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # used by seo meta and the atom feed
   My personal website for science, technology, and patent law.
 
 # Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
+# E.g. 'https://username.git0hub.io', note that it does not end with a '/'.
 url: "https://gir218.github.io"
 
 github:
