Update url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.git0hub.io', note that it does not end with a '/'.
-url: "https://gir218.github.io"
+url: "https://gilrepa.com"
 
 github:
   username: gir218 # change to your GitHub username
